# Rel

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_api.py
.streamlit/: config.toml  secrets.toml.example
api/: __init__.py  main.py
docs/: API.md  detailed_guide.md
sql/: init.sql  schema.sql
voicetosqldatabase/: __init__.py
vtsql/: __init__.py  audio.py  audio_core.py  cache.py  client.py  config.py  db.py  db_core.py  filters.py  filters_core.py  llm.py  pipeline.py  prerequisites.py  schemas.py  sql_builder.py  ui.py
vtsql/services/: __init__.py  pipeline_service.py
