[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtsql"
version = "2.0.0"
description = "A local Voice-to-SQL query dashboard and API utilizing LLMs, semantic caching, and PyDeck maps."
readme = "README.md"
authors = [
    { name = "SyntaxSorcerer63" }
]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.29.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "psycopg2-binary>=2.9.9",
    "requests>=2.31.0",
    "sounddevice>=0.5.2",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    "faster-whisper>=1.0.0",
]

[tool.setuptools]
packages = ["vtsql", "vtsql.services", "voicetosqldatabase"]
